<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/ll_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView

                android:id="@+id/img_weather"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_simple"
                android:textSize="12dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_temperature_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temperature"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>
