<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


        <LinearLayout
            android:id="@+id/ll_today_weather"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/weather_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/city"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/temperature"
                    android:textColor="#ffffff"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/weather"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_wind_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_value"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="20dp"

                    android:background="@color/white">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tv_humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_value"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_weight="0"
                        android:background="@color/white">

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_pm25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/tv_air_quality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


</RelativeLayout>